[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "pybind11>=2.7.1",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp38-win* cp39-win* cp310-win* cp311-win* cp312-win* cp313-win*"
skip = "*-win_arm64"
test-command = "python -c \"import external_proc; print(external_proc.core.__version__)\""

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86"]
